[Agrim]FIX:Changes in the request body of subsciption API
