# app/models/user.rb
@@ -1,7 +1,7 @@
 class User < ApplicationRecord
   devise :database_authenticatable, :registerable, :rememberable, :validatable
 
-  enum role: { user: 0, supervisor: 1}
+  enum role: { user: 0, supervisor: 1 }
 
   validates :first_name, presence: true
   validates :last_name, presence: true
@@ -14,7 +14,6 @@ class User < ApplicationRecord
   has_many :blacklisted_tokens, dependent: :destroy
   after_create :create_default_subscription
 
-  # Fix inspect error
   def inspect
     "#<User id: #{id}, email: #{email}, role: #{role}>"
   end
@@ -31,14 +30,13 @@ class User < ApplicationRecord
   def self.authenticate(email, password)
     return nil if email.blank? || password.blank?
     user = find_by(email: email.downcase.strip)
-    user if user&.valid_password?(password) # Devise method
+    user if user&.valid_password?(password)
   end
 
   def self.ransackable_attributes(auth_object = nil)
     ["created_at", "email", "first_name", "id", "last_name", "mobile_number", "role", "updated_at"]
   end
 
-  # Helper methods for role checks
   def admin?
     role == "admin"
   end
@@ -52,7 +50,7 @@ class User < ApplicationRecord
   end
 
   def premium?
-    subscription&.premium? && subscription.active? && (subscription.end_date.nil? || subscription.end_date > Time.current)
+    subscription&.premium? && subscription.active?
   end
 
   def can_access_premium_movies?
@@ -62,6 +60,21 @@ class User < ApplicationRecord
   private
 
   def create_default_subscription
-    Subscription.create(user: self, start_date: Time.current, end_date: nil) unless subscription
+    return if subscription
+    begin
+      customer = Stripe::Customer.create(email: email)
+      Subscription.create!(
+        user: self,
+        plan_type: 'basic',
+        status: 'active',
+        stripe_customer_id: customer.id
+      )
+    rescue Stripe::StripeError
+      Subscription.create!(
+        user: self,
+        plan_type: 'basic',
+        status: 'active'
+      )
+    end
   end
 end
