# db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[7.1].define(version: 2025_05_06_113015) do
+ActiveRecord::Schema[7.1].define(version: 2025_05_12_053846) do
   # These are extensions that must be enabled in order to support this database
   enable_extension "plpgsql"
 
@@ -119,12 +119,13 @@ ActiveRecord::Schema[7.1].define(version: 2025_05_06_113015) do
 
   create_table "subscriptions", force: :cascade do |t|
     t.bigint "user_id", null: false
-    t.datetime "start_date"
-    t.datetime "end_date"
-    t.boolean "premium", default: false
-    t.boolean "active", default: true
     t.datetime "created_at", null: false
     t.datetime "updated_at", null: false
+    t.string "plan_type", default: "basic", null: false
+    t.string "status", default: "active", null: false
+    t.string "stripe_customer_id"
+    t.string "stripe_subscription_id"
+    t.datetime "expires_at"
     t.index ["user_id"], name: "index_subscriptions_on_user_id"
   end
 
